# multi-window-sync

./: .gitmodules  CMakeLists.txt  log.txt
src/: main.cpp
